--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -50,7 +50,8 @@ Representation of Natural Scenes with Large Seasonal Variations}
 
 %%%%%
 \usepackage{color}
-\newcommand{\todo}[1]{\textcolor{red}{\textbf{#1}}}
+%\newcommand{\todo}[1]{\textcolor{red}{\textbf{#1}}}
+\newcommand{\todo}[1]{}
 
 %------------------------------------------------------------------------- 
 % Document starts here
