--- a/experimental.tex
+++ b/experimental.tex
@@ -5,8 +5,8 @@ Since then, every 8 to 15 days, we operate an autonomous surface vessel
 (Kingfisher from Clearpath Robotics, see fig.~\ref{fig:kingfisher}) around a small lake next to our campus.
 This lake is 400m long by 200m wide, with a small island and a total perimeter
 of 1km. Its shores are covered with trees, from small bushes to tall full-grown
-trees, some at the water line other further away, grass areas are interweaved
-with the shrubberies and a small scenic trail run around the lake. Some of the
+trees, some at the water line, others further away, grass areas are interweaved
+with the shrubberies and a small scenic trail runs around the lake. Some of the
 places (as in fig.~\ref{fig:dataset-hard}) have office buildings in the
 background. 
 \begin{figure}[htb]
@@ -40,7 +40,7 @@ are challenging for computer vision: the lake surface acts as a somewhat
 deformable mirror, sometimes very smooth and reflective and at other times not
 reflective at all due to wavelets. Additionally, flooding events means that the
 water line can move by up to 1m in some surveys. Trees are challenging for
-three reasons, first these ones don't always have leaves, second they are
+three reasons, first these ones do not always have leaves, second they are
 fractal self-similar structures, and last they are 3D semi-transparent
 structures whose appearance is very sensitive to view point, especially in
 winter. Finally, the sky varies with the weather and the sun position. Because
