--- a/introduction.tex
+++ b/introduction.tex
@@ -28,7 +28,7 @@ of images in our dataset.
 To assess the difficulty of interpreting these images, in a
 previous work, we evaluated the time required by a human to decide if two
 images correspond to the same place albeit at different time of the year. For
-some image pairs, our test subject took more than 30 seconds to confirm their answer.  
+some image pairs, our test subjects took more than 30 seconds to confirm their answer.  
 
 One of the challenge of natural environment monitoring is to be able to compare
 the appearance of vastly varying outdoor settings with the purpose of at least
