Moved plot error to figure 7.

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -45,28 +45,32 @@ The last approach was used the same learning rate settings as the first approach
 \label{3appfilter}
 \end{figure}
 
-The best results regarding the loss values on the train and test datasets were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for images from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels. The error between X and Y coordinates of the predicted and original labels was also plotted on fig.~\ref{errormap} and was found to be centered on the origin without significant bias.
+The best results regarding the loss values on the train and test datasets were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for images from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a and b). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels. The error between X and Y coordinates of the predicted and original labels was also plotted on fig.~\ref{map}.c and was found to be centered on the origin without significant bias.
 
 \begin{figure}[htb]
 \centering
 \begin{tabular}{p{0.3\textwidth}p{0.3\textwidth}p{0.3\textwidth}}
-    a) Overhead map image with a sample boat path & 
-    b) Map of original labels & 
-    c) Map of predicted labels  \\
-    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/lac}}& 
+    %a) Overhead map image with a sample boat path & 
+    a) Map of original labels & 
+    b) Map of predicted labels&
+    c) 2D error of the predicted label position
+    \\
+    %\bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/lac}}& 
     \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_labels_twopoints}} & 
-    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_prediction_twopoints}}\\
+    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_prediction_twopoints}}&
+    \bmvaHangBox{\includegraphics[height=0.35\textwidth]{images/regression/error}}\\
+    \\
 \end{tabular}
 \caption{Map of predicted positions and original labels.}
 \label{map}
 \label{lake}
 \end{figure}
 
-\begin{figure}[htb]
-\centering
-\begin{tabular}{p{0.3\textwidth}cp{0.3\textwidth}}
-    \bmvaHangBox{\includegraphics[height=0.3\textwidth]{images/regression/error}}\\
-\end{tabular}
-\caption{Error between X and Y coordinates of predicted and original labels.}
-\label{errormap}
-\end{figure}
+% \begin{figure}[htb]
+% \centering
+% \begin{tabular}{p{0.3\textwidth}cp{0.3\textwidth}}
+%     \bmvaHangBox{\includegraphics[height=0.3\textwidth]{images/regression/error}}\\
+% \end{tabular}
+% \caption{Error between X and Y coordinates of predicted and original labels.}
+% \label{errormap}
+% \end{figure}
