--- a/egbib.bib
+++ b/egbib.bib
@@ -251,6 +251,14 @@
 	year = "2015"
 }
 
+@article{radford2016,
+    author = "Radford,A. and Metz,L. and Chintala,S.",
+    journal = "arXiv preprint arXiv:1511.06434",
+    title= "{Unsupervised Representation Learning with Deep Convolutional Generative Adversarial Networks}",
+    year = "2016"
+}
+
+
 @article{jia2014caffe,
 	author = "Jia, Y. and Shelhamer, E. and Donahue, J. and Karayev, S. and Long, J. and Girshick, R. and Guadarrama, S. and Darrell, T.",
 	journal = "arXiv preprint arXiv:1408.5093",
