Cropped map images

--- a/results-regression.tex
+++ b/results-regression.tex
@@ -56,8 +56,8 @@ The best results regarding the loss values on the train and test datasets were a
     c) 2D error of the predicted label position
     \\
     %\bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/lac}}& 
-    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_labels_twopoints}} & 
-    \bmvaHangBox{\includegraphics[height=0.4\textwidth]{images/regression/lake_prediction_twopoints}}&
+    \bmvaHangBox{\includegraphics[trim={1.5cm 2.0cm 1.8cm 2.3cm},clip,height=0.4\textwidth]{images/regression/lake_labels_twopoints}} & 
+    \bmvaHangBox{\includegraphics[trim={1.5cm 2.0cm 1.8cm 2.3cm},clip,height=0.4\textwidth]{images/regression/lake_prediction_twopoints}}&
     \bmvaHangBox{\includegraphics[height=0.35\textwidth]{images/regression/error}}\\
     \\
 \end{tabular}
