--- a/results-regression.tex
+++ b/results-regression.tex
@@ -2,7 +2,7 @@
 \label{sec:results-regression}
 The objective of the regression task is to perform localization with performance comparable to GPS system. The parameters of the training had to be tuned for the network to perform at its best for the regression task.
 
-The layer of the network are initialized using normal distributions. The initialization variances had to be changed so that the weights are big enough to propagate information through the network while still ensuring convergence.
+The layers of the network are initialized using normal distributions. The initialization variances had to be changed from 0.01 to 0.1 for Conv1 and to 0.05 for Conv2, Conv3, Conv4 and Conv5, so that the weights are big enough to propagate information through the network while still ensuring convergence.
 The initial learning rate and its evolution policy heavily depends on the loss which is used. For the regression task, very high values and a diverging behaviour were observed with the Euclidean loss at the beginning of the training. The initial learning rate had to be decreased to avoid these effects. The learning rate policy was set to the "step" policy from Caffe and it was chosen to decrease the learning rate by half every 25 000 iterations. In our case this corresponds to the number of iterations required to observe the stabilization of the loss after each exponential decrease.
 
 In this context, we tested three different approaches.  The first one consists in training every layer with the same learning rate. The second one consists in fine-tuning the learning rate of each layer differently based on the results given by the first approach. The third one consists in loading the weights of the convolution layers from the classification training. In order to compare our results with those three approaches, we refer to the following loss function :
