--- a/results-classification.tex
+++ b/results-classification.tex
@@ -12,24 +12,25 @@ We can thus extract the trained filters responses to see how images as processed
 \label{prototypes}
 \end{figure}
 
-We generated prototypes for all classes, and tested whether an image can be recognized only using its class prototypes. Testing over a thousand random images and measuring using a cosine distance shows that all layers can be used as suitable descriptors, with distances to the wrong prototypes being indubitably larger than distances to the right prototype on average (see table~\ref{fulltrainvalues}, column 2 and fig.~\ref{allclft})
+We generated prototypes for all classes, and tested whether an image can be recognized only using its class prototypes. Testing over a thousand random images and measuring using a cosine distance shows that all layers can be used as suitable descriptors, with distances to the wrong prototypes being indubitably larger than distances to the right prototype on average (see table~\ref{fulltrainvalues}, column 2 and 3 and fig.~\ref{allclft})
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{|c|c||c|c||c|}
+\small
+\begin{tabular}{|c|c|c||c|c|}
   \hline
-  Layer & Overall Ratio & Ratio (seen)  & Ratio (unseen) & Classification Percentage\\
-        & (complete dataset) & (1st half dataset) & (2nd half dataset) &(complete dataset)\\
+  Layer & Overall Ratio & Precision (\%) & Ratio (seen)  & Ratio (unseen) \\
+  & (complete dataset) & top-20 & (1st half dataset) & (2nd half dataset) \\
   \hline
-  conv1 & 1,76 & 1,70 & 1,03 & 0,439 \\ 
-  conv2 & 2,99 & 0,93 & 0,96 & 0,423 \\ 
-  conv3 & 1,86 & 1,40 & 0,94 & 0,348 \\ 
-  conv4 & 1,79 & 1,16 & 1,00 & 0,084 \\ 
-  conv5 & 1,68 & 1,32 & 0,98 & 0,573 \\ 
-  pool5 & 1,86 & 1,42 & 0,95 & 0,52  \\ 
+  conv1 & 1.76 & 43.9\% & 1.70 & 1.03 \\ 
+  conv2 & 2.99 & 42.3\% & 0.93 & 0.96 \\ 
+  conv3 & 1.86 & 34.8\% & 1.40 & 0.94 \\ 
+  conv4 & 1.79 & 08.4\% & 1.16 & 1.00 \\ 
+  conv5 & 1.68 & 57.3\% & 1.32 & 0.98 \\ 
+  pool5 & 1.86 & 52.0\% & 1.42 & 0.95 \\ 
   \hline
 \end{tabular}
-\caption{Ratio of median distance of a random image to the wrong prototypes over median distance to the correct prototype. 2nd column refers to the ratio achieved using the complete dataset for training. 3rd column is similar but using only half of the classes. 4th column evaluate the generalization performance by evaluating images from the classes not used for training. 5th column give the percentage of successful top20 classification using the distance to the prototypes of the full dataset}
+\caption{Ratio of median distance of a random image to the wrong prototypes over median distance to the correct prototype. 2nd column refers to the ratio achieved using the complete dataset for training. 3rd column give the percentage of successful top-20 classification using the distance to the prototypes of the full dataset. 4th column is similar but using only half of the classes. 5th column evaluate the generalization performance by evaluating images from the classes not used for training. }
 \label{fulltrainvalues}
 \end{table}
 
@@ -48,7 +49,7 @@ We generated prototypes for all classes, and tested whether an image can be reco
 \end{figure}
 
 We also trained the same network on half the classes, to test for generalization capabilities. We wanted to test whether the network learned how to transform an image into its seasonal-invariant representation. %, proved to exist with the full training. % not idea what that means. CP
-In the case of the classes observed in the training set, the representation results are analogous to the full dataset. However, the internal features are not discriminative when applied on images from unseen classes (table~\ref{fulltrainvalues}, column 3 and 4). It seems that the network learns how to efficiently discriminate between its known classes, rather than truly learning seasonal variations.
+In the case of the classes observed in the training set, the representation results are analogous to the full dataset. However, the internal features are not discriminative when applied on images from unseen classes (table~\ref{fulltrainvalues}, column 4 and 5). It seems that the network learns how to efficiently discriminate between its known classes, rather than truly learning seasonal variations.
 
 % Merged in table above
 % \begin{table}[htb]
@@ -57,12 +58,12 @@ In the case of the classes observed in the training set, the representation resu
 %   \hline
 %    Layer & Ratio (seen) & Ratio (unseen) \\
 %   \hline
-%   conv1 & 1,70 & 1,03 \\
-%   conv2 & 0,93 & 0,96 \\
-%   conv3 & 1,40 & 0,94 \\
-%   conv4 & 1,16 & 1,00 \\
-%   conv5 & 1,32 & 0,98 \\
-%   pool5 & 1,42 & 0,95 \\
+%   conv1 & 1.70 & 1.03 \\
+%   conv2 & 0.93 & 0.96 \\
+%   conv3 & 1.40 & 0.94 \\
+%   conv4 & 1.16 & 1.00 \\
+%   conv5 & 1.32 & 0.98 \\
+%   pool5 & 1.42 & 0.95 \\
 %   \hline
 % \end{tabular}
 % \caption{Ratio of median distances, for seen and unseen classes}
